--- a/style.css
+++ b/style.css
@@ -39,3 +39,48 @@ footer {
   text-transform: uppercase;
   gap: 85px;
 }
+
+/* Modale contact  */
+
+#contact-modale {
+  display: none;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+.modale-content {
+  background-color: #fff;
+  margin: 10% auto;
+  border: 5px solid black;
+  width: 522px;
+  height: 587px;
+}
+
+.modal-header {
+  overflow: hidden;
+}
+
+.modal-header img {
+  width: 800px;
+  height: 105px;
+  margin: 0 -147px;
+}
+
+#contact-form {
+  margin: 50px 20%;
+  text-transform: uppercase;
+}
+
+#contact-form input,
+textarea {
+  border-radius: 8px;
+  border: 1px solid #b8bbc2;
+  height: 40px;
+}
