--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ Theme Name: Freelance Photographer Theme
 
 body {
   font-family: SpaceMono, sans-serif;
+  margin: 0;
 }
 
 h1 {
@@ -14,6 +15,7 @@ h1 {
   font-weight: bold;
   text-shadow: 1px 1px 2px black;
   font-size: 96px;
+  text-transform: uppercase;
 }
 
 h2 {
@@ -21,6 +23,7 @@ h2 {
   font-style: italic;
   font-weight: normal;
   font-size: 66px;
+  text-transform: uppercase;
 }
 
 h3 {
@@ -36,7 +39,8 @@ p {
 }
 
 ul,
-li a {
+li a,
+a {
   list-style: none;
   text-decoration: none;
   color: inherit;
@@ -49,6 +53,7 @@ nav {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
 .navbar {
@@ -71,6 +76,7 @@ footer {
   align-items: center;
   justify-content: center;
   gap: 85px;
+  border-top: 1px solid black;
 }
 
 #menu-footer-menu {
@@ -149,6 +155,12 @@ footer p {
   border-radius: 2px;
 }
 
+.btn {
+  background-color: #d8d8d8;
+  text-align: center;
+  padding: 16px 110px;
+}
+
 @keyframes animatetop {
   from {
     top: -300px;
@@ -158,4 +170,89 @@ footer p {
     top: 0;
     opacity: 1;
   }
+}
+
+/* Single photo block */
+
+.photo-block {
+  display: flex;
+}
+
+.photo-info {
+  width: 50vw;
+  padding: 20px;
+  box-sizing: border-box;
+  align-self: flex-end;
+  text-transform: uppercase;
+}
+
+.photo {
+  width: 50vw;
+}
+
+.photo img {
+  width: 100%;
+  max-height: 80vh;
+  object-fit: contain;
+}
+
+.photo-info h2 {
+  margin: 0;
+}
+
+.photo-info p {
+  margin: 10px 0;
+}
+
+.photo-more {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  height: 118px;
+  border-bottom: 1px solid black;
+}
+
+.button-container {
+  display: flex;
+  gap: 95px;
+  align-items: center;
+  border-top: 1px solid black;
+}
+
+.photo-navigation {
+  align-self: flex-end;
+  padding-bottom: 20px;
+}
+
+.single-photo {
+  padding: 30px 145px;
+}
+
+.similar-photos-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  gap: 20px;
+  contain: content;
+  max-height: 495px;
+  width: 100%;
+  margin-top: 50px;
+}
+
+.similar-photos-container img {
+  width: 100%;
+  object-fit: cover;
+  align-self: center;
+}
+
+.prev-thumbnail img {
+  display: none;
+}
+
+.prev-post:hover + .prev-thumbnail img {
+  display: block;
+}
+
+#more-photos {
+  margin: auto;
 }
