--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ nav {
   justify-content: space-around;
   align-items: center;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  line-height: 70px;
 }
 
 .navbar {
@@ -67,6 +68,11 @@ nav {
 .custom-logo {
   height: 15px;
   width: 215px;
+}
+
+.mobile-menu-trigger,
+.mobile-menu {
+  display: none;
 }
 
 /* Footer */
@@ -264,7 +270,7 @@ footer p {
 }
 
 #more-photos {
-  margin: auto;
+  margin: 50px auto;
 }
 
 .all-photos {
@@ -360,7 +366,7 @@ option:hover {
   color: white;
   margin: auto;
   position: absolute;
-  font-size: 25px;
+  font-size: 30px;
 }
 
 #icon-fullscreen {
@@ -387,8 +393,7 @@ option:hover {
   justify-content: space-between;
   color: white;
   text-transform: uppercase;
-  position: absolute;
-  bottom: 10px;
+  padding: 439px 10px;
 }
 
 /* Lightbox */
@@ -402,7 +407,7 @@ option:hover {
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 1000;
   overflow: auto;
-  display: block;
+  display: none;
   color: white;
 }
 
@@ -446,4 +451,30 @@ option:hover {
   font-weight: bold;
   gap: 30%;
   margin-top: -50px;
+}
+
+/* Styles for mobile view */
+
+@media screen and (max-width: 768px) {
+  .navbar {
+    display: none;
+  }
+
+  .mobile-menu-trigger {
+    display: block;
+  }
+
+  .mobile-menu {
+    display: none;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: #e00000;
+    color: white;
+    font-size: 44px;
+    text-transform: uppercase;
+    z-index: 9999;
+    text-align: center;
+    padding-top: 220px;
+  }
 }
