--- a/style.css
+++ b/style.css
@@ -297,6 +297,7 @@ footer p {
   height: auto;
   object-fit: cover;
   position: relative;
+  animation: slideDown 1s ease-in-out forwards;
 }
 
 .hero-title {
@@ -313,6 +314,17 @@ footer p {
 
 .hero {
   position: relative;
+}
+
+@keyframes slideDown {
+  0% {
+    opacity: 0;
+    transform: translateY(-100px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 /* Photo filters */
@@ -506,6 +518,7 @@ option:hover {
   .mobile-menu {
     display: none;
     position: fixed;
+    font-weight: normal;
     width: 100%;
     height: 100%;
     background-color: #e00000;
@@ -515,6 +528,12 @@ option:hover {
     z-index: 888;
     text-align: center;
     padding-top: 110px;
+  }
+
+  .mobile-navbar {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
   }
 
   footer,
@@ -539,6 +558,10 @@ option:hover {
 
   .photo-filters::-webkit-scrollbar {
     display: none;
+  }
+
+  .mobile-menu-trigger i {
+    filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.5));
   }
 
   .taxonomies {
@@ -587,7 +610,7 @@ option:hover {
   }
 
   .photo-info-hover {
-    padding: 438px 20px;
+    padding: 308px 20px;
   }
 
   .modale-content {
